layout fix flex-start wrap

--- a/css/style.css
+++ b/css/style.css
@@ -1872,12 +1872,14 @@ main {
 
 .wrap {
   -webkit-flex-wrap: wrap;
-  flex-wrap: wrap; }
+  flex-wrap: wrap;
+  -webkit-align-content: flex-start;
+  align-content: flex-start; }
   .wrap .full {
     width: 100%; }
   .wrap > section, .wrap > .row {
-    -webkit-align-content: flex-start;
-    align-content: flex-start;
+    -webkit-align-items: flex-start;
+    align-items: flex-start;
     margin-bottom: 2.5rem; }
     .wrap > section > header, .wrap > .row > header {
       width: 100%; }
